# pyfreerouting

./: pyproject.toml  requirements.txt  ruff.toml
src/pyfreerouting/: __init__.py  parser.py  rules.py  writer.py
tests/: test_freerouting_models.py
tests/data/: rules-2-layers.rules
