[project]
name = "pyfreerouting"
version = "0.1.0"
dynamic = ["dependencies"]
authors = [{ name = "Simon Hobbs" }]
requires-python = '>=3.11'
classifiers = [
	'Development Status :: 2 - Pre-Alpha',
	'Intended Audience :: Developers',
	'Natural Language :: English',
	'Programming Language :: Python :: 3',
]
description = "Freerouting rules parser"
keywords = ['pyfreerouting']

readme = "README.md"

[project.urls]
github = 'https://github.com/thejigsapp/pyfreerouting'

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ['src']

[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8.0"]

# ==== pytest ====
[tool.pytest.ini_options]
minversion = "6.0"
python_files = ["tests.py", "test_*.py"]

# ==== mypy ====
[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
plugins = [
	#    "mypy_django_plugin.main",
]

[[tool.mypy.overrides]]
# Django migrations should not produce any errors:
module = "*.migrations.*"
ignore_errors = true

[tool.django-stubs]
django_settings_module = "config.settings.test"

# ==== djLint ====
[tool.djlint]
blank_line_after_tag = "load,extends"
close_void_tags = true
format_css = true
format_js = true
# TODO: remove T002 when fixed https://github.com/Riverside-Healthcare/djLint/issues/687
ignore = "H006,H030,H031,T002"
include = "H017,H035"
indent = 2
max_line_length = 119
profile = "django"

[tool.djlint.css]
indent_size = 2

[tool.djlint.js]
indent_size = 2

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
	".bzr",
	".direnv",
	".eggs",
	".git",
	".git-rewrite",
	".hg",
	".mypy_cache",
	".nox",
	".pants.d",
	".pytype",
	".ruff_cache",
	".svn",
	".tox",
	".venv",
	"__pypackages__",
	"_build",
	"buck-out",
	"build",
	"dist",
	"node_modules",
	"venv",
	"*/migrations/*.py",
	"staticfiles/*",
]
# Same as Django: https://github.com/cookiecutter/cookiecutter-django/issues/4792.
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = [
	"F",
	"E",
	"W",
	"C90",
	"I",
	"N",
	"UP",
	"YTT",
	# "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
	"ASYNC",
	"S",
	"BLE",
	"FBT",
	"B",
	"A",
	"COM",
	"C4",
	"DTZ",
	"T10",
	"DJ",
	"EM",
	"EXE",
	"FA",
	'ISC',
	"ICN",
	"G",
	'INP',
	'PIE',
	"T20",
	'PYI',
	'PT',
	"Q",
	"RSE",
	"RET",
	"SLF",
	"SLOT",
	"SIM",
	"TID",
	"TCH",
	"INT",
	# "ARG", # Unused function argument
	"PTH",
	"ERA",
	"PD",
	"PGH",
	"PL",
	"TRY",
	"FLY",
	# "NPY",
	# "AIR",
	"PERF",
	# "FURB",
	# "LOG",
	"RUF",
]
ignore = [
	"UP007",
	#"UP045",
	"S101",   # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
	"RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
	"SIM102", # sometimes it's better to nest
	"COM812", # missing-trailing-comma recommended to remove
	"ISC001", # single-line-implicit-string-concatenation recommended to remove
	"E501",   # line too long
	"PD901",  # generic names
	"ERA001", # commented out code
	"PT009",  # assert with pytest
	"UP017",  # Dont change my timezone
	"PTH118", # `os.path.join()` should be replaced by `Path` with `/` operator
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
