[project]
name = "pyfreerouting"
version = "0.1.0"
dynamic = ["dependencies"]
authors = [{ name = "Simon Hobbs" }]
requires-python = '>=3.11'
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
description = "Freerouting rules parser"
keywords = ['pyfreerouting']

readme = "README.md"

[project.urls]
github = 'https://github.com/thejigsapp/pyfreerouting'

[tool.setuptools]
include-package-data = true

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.hatch.metadata]
allow-direct-references = true

[tool.setuptools.packages.find]
where = ['src']

[build-system]
requires = ["setuptools>=70", "setuptools-scm>=8.0"]
